Header 90% missing dropdown menu

--- a/src/app/header/searchbar/searchbar.component.css
+++ b/src/app/header/searchbar/searchbar.component.css
@@ -6,6 +6,11 @@ input {
     background-color: #74A897;
 }
 
+::placeholder {
+    font-weight: 700;
+}
+
 button {
     background-color: var(--green-color-3);
 }
+
