--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,16 +1,10 @@
 
-.container{
-    height: 100px;
+#header-box{
+    
     border-bottom: 1px solid var(--foreground-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
-
 p {
-
     color : var(--text-color-1);
     margin: 10px;
-
+    font-weight: 700;
 }
-
