--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<div id="header-box" class="container">
-    <p>Capstone Comrades</p>
-    <searchbar></searchbar>
-    <navbar></navbar>
+<div id="header-box"  class="container d-flex align-items-center justify-content-between">
+    <p class="my-2">Capstone Comrades</p>
+    <searchbar class="my-2"></searchbar>
+    <navbar class="my-2"></navbar>
 </div>
