Footer 90% needs margin/padding adjustments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,29 @@
-<app-header></app-header>
+<header>
+    <app-header></app-header>
+</header>
+<body>
+    <div style="color:white">
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+        <li>
+            <p>.</p>
+        </li>
+    </div>
+</body>
+<app-footer></app-footer>
