--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,78 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+      <div class="row">
+  
+        <!-- First Column -->
+        <div class="col-md-3">
+          <div class="row">
+            <div class="col">
+              <!-- First Row Content -->
+              <p>Capstone Comrades</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <!-- Second Row Content -->
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae, nihil similique ipsam, quibusdam ab quo a eos</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Second Column -->
+        <div class="col-md-3">
+          <div class="row">
+            <div class="col text-center">
+              <!-- First Row Content -->
+              <p>Terms of Service</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <!-- Second Row Content -->
+              <p>Read</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Third Column -->
+        <div class="col-md-3">
+          <div class="row">
+            <div class="col text-center">
+              <!-- First Row Content -->
+              <p>Contact Us</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <!-- Second Row Content -->
+              <p>Email</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <!-- Third Row Content -->
+              <p>Twitter</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Fourth Column -->
+        <div class="col-md-3">
+          <div class="row">
+            <div class="col text-center">
+              <!-- First Row Content -->
+              <p>About us</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col text-center">
+              <!-- Second Row Content -->
+              <p>Our Team</p>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+    </div>
+</footer>
+  
