--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,5 @@
-<header>
-    <app-header></app-header>
-</header>
-<body>
-    <div style="color:white">
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-        <li>
-            <p>.</p>
-        </li>
-    </div>
-</body>
+<app-header></app-header>
+
+<app-student-view></app-student-view>
+
 <app-footer></app-footer>
