--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<app-student-view></app-student-view>
-
+<!-- <app-student-view></app-student-view> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
