--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <a href="">Home</a>
     <a href="">Username</a>
-    <a href="">Teams</a>
-    <a href="">Students</a>
+    <a href="teams">Teams</a>
+    <a href="students">Students</a>
     <a href="">Logout</a>
 </nav>
