--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -6,8 +6,47 @@ h1 {
     font-size: 128px;
 }
 
+input {
+    width: 500px;
+}
+
+#boxWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .btn-success {
+    margin-top: 100px;
+    border-radius: 50px;
+    background-color: #198754;
+    margin-bottom: 50px;
+    font-size: 32px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+#btnWrapper {
     display: flex;
     flex-direction: row;
+    align-content: center;
     justify-content: center;
+}
+
+.imageRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.container {
+    margin-top: 100px;
+    border-radius: 40px;
+    background: #9FA2A8;
+    box-shadow: -55px -51px 4px 10px rgba(0, 0, 0, 0.50);
+}
+
+.forgotPass {
+    float: left;
 }
