--- a/src/app/team-view/team-view.component.html
+++ b/src/app/team-view/team-view.component.html
@@ -1,1 +1,28 @@
-<p>team-view works!</p>
+<div class="container">
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+    </div>
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+      <div class="col-md-4">
+        <team-card></team-card>
+      </div>
+    </div>
+    <div class="text-center">
+      <a href="">Show more>></a>
+    </div>
+</div>
+  
