--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav>
-    <a href="">Home</a>
-    <a href="">Username</a>
-    <a href="teams">Teams</a>
-    <a href="students">Students</a>
-    <a href="">Logout</a>
+        <a href="">Home</a>
+        <a href="">Username</a>
+        <img src="assets/dropdown.svg" width="30" height="33">
+        <a href="teams">Teams</a>
+        <a href="students">Students</a>
+        <a href="">Logout</a>
 </nav>
