--- a/src/app/team-view/team-card/team-card.component.html
+++ b/src/app/team-view/team-card/team-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 overflow-hidden">
+<div class="card m-3 overflow-hidden">
     <div class="row g-0">
         <img src="" class="card-img-top" alt="...">
         <div class="card-body">
