--- a/src/app/student-view/student-card/student-card.component.css
+++ b/src/app/student-view/student-card/student-card.component.css
@@ -19,14 +19,14 @@ p {
     border: 3px solid #3A3F45;
     background: #212529;
     margin: 10px;
-    width: 530px;
-    height: 246px;
+    width: 100%;
+    height: 100%;
     flex-shrink: 0;
 }
 
 .img-fluid {
-    width: 242px;
-    height: 252px;
+    width: 100%;
+    height: 100%;
     flex-shrink: 0;
     background: #198754;
     
