--- a/src/app/team-view/team-card/team-card.component.css
+++ b/src/app/team-view/team-card/team-card.component.css
@@ -3,6 +3,8 @@
     border-radius: 5px;
     border: 3px solid #3A3F45;
     background: #212529;
+    width: 100%;
+    height: 100%;
 }
 
 p {
@@ -21,7 +23,7 @@ p {
 }
 
 .card-img-top {
-    width: 373px;
+    width: 100%;
     height: 286px;
     flex-shrink: 0;
     border-radius: 5px;
