--- a/src/app/team-view/team-card/team-card.component.html
+++ b/src/app/team-view/team-card/team-card.component.html
@@ -1,4 +1,4 @@
-<div class="card m-3 overflow-hidden">
+<!-- <div class="card m-3 overflow-hidden">
     <div class="row g-0">
         <img src="" class="card-img-top" alt="...">
         <div class="card-body">
@@ -23,4 +23,33 @@
           </div>
       </div>
     </div>
+</div> -->
+
+
+<!-- team-card.component.html -->
+<div class="card m-3 overflow-hidden">
+  <div class="row g-0">
+    <img [src]="card.imageSrc" class="card-img-top" alt="Card Image">
+    <div class="card-body">
+      <div class="card-text">
+        <p class="tags">Name: </p>
+        <p>{{ card.name }}</p>
+      </div>
+      <div class="card-text">
+        <p class="tags">Current Members Majors: </p>
+        <p>{{ card.currentMembersMajors }}</p>
+      </div>
+      <div class="card-text">
+        <p class="tags">Wanted Majors: </p>
+        <p>{{ card.wantedMajors }}</p>
+      </div>
+      <div class="card-text">
+        <p class="tags">Project Concentration: </p>
+        <p>{{ card.projectConcentration }}</p>
+      </div>
+      <div class="text-center">
+        <a [href]="card.showMoreLink">Show more >></a>
+      </div>
+    </div>
+  </div>
 </div>
