--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     </div>
     <ul class="navMenu">
       <li><a routerLink="/home-view" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-      <li>Sign In</li>
+      <li><a routerLink="/signin-view" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a></li>
       <li><a routerLink="/signup-view" routerLinkActive="active" ariaCurrentWhenActive="page">Sign Up</a></li>
       <li>Contact Us</li>
       <li>About Us</li>
