--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,24 +1,28 @@
 <div class="container">
-    <h1>Sign In</h1>
+    <h1>Sign Up</h1>
     <!--Email box-->
-    <div id="boxWrapper">
+    <div id="boxWrapper1">
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="2020XXXXX@kfupm.edu.sa">
+            <label for="exampleFormControlInput1" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First">
         </div>
-        <!--Password box-->
         <div class="mb-3">
-            <label for="inputPassword5" class="form-label">Password</label>
-            <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+            <label for="exampleFormControlInput1" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Last">
         </div>
-        <label class="forgotPass">Forgot Passowrd?</label>
+    </div>
+    <div id="boxWrapper2">
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">KFUPM Email</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="s2020XXXXX@kfupm.edu.sa">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
+            <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="05XXXXXXXX">
+        </div>
     </div>
     <div id="btnWrapper">
-        <button type="button" class="btn btn-success">Sign In</button>
+        <button type="button" class="btn btn-success" (click)="nextForm('/signup-view/submit')">Next</button>
     </div>
-</div>
-<div class="imageRow">
-    <img src="assets/compass_icon.png" width="200px" height="200px">
-    <img src="assets/bulb_icon.png" width="200px" height="200px">
 </div>
 
