--- a/src/app/student-view/student-view.component.html
+++ b/src/app/student-view/student-view.component.html
@@ -1,30 +1,6 @@
-<!-- <div class="container">
-  <div class="row mb-3">
-    <div class="col-md-6" *ngFor="let card of cards.slice(0, 2)">
-      <student-card [card]="card"></student-card>
-    </div>
-  </div>
-  <div class="row mb-3">
-    <div class="col-md-6" *ngFor="let card of cards.slice(2, 4)">
-      <student-card [card]="card"></student-card>
-    </div>
-  </div>
-  <div class="row mb-3">
-      <div class="col-md-6" *ngFor="let card of cards.slice(4, 6)">
-        <student-card [card]="card"></student-card>
-      </div>
-  </div>
-
-  <div class="text-center" *ngIf="showMore">
-    <a (click)="showMoreCards()">Show more >></a>
-  </div>
-</div> -->
-
-
-
 <div class="container">
   <div class="row mb-3">
-    <div *ngFor="let card of cards.slice(0, visibleCardCount)" class="col-md-6">
+    <div *ngFor="let card of cards.slice(0, visibleCardCount)" class="col-md-6" [@fadeInOut]>
       <student-card [card]="card"></student-card>
     </div>
   </div>
