--- a/src/app/student-view/student-card/student-card.component.css
+++ b/src/app/student-view/student-card/student-card.component.css
@@ -4,7 +4,7 @@ p {
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 45px; /* 187.5% */
+    line-height: 45px;
     display: inline;
 }
 
@@ -13,23 +13,32 @@ p {
     font-weight: 722;
 }
 
-
 .card {
+    display: flex;
+    flex-direction: column;
     border-radius: 5px;
     border: 3px solid #3A3F45;
     background: #212529;
     margin: 10px;
-    width: 100%;
     height: 100%;
     flex-shrink: 0;
 }
+  
+.card-body {
+    flex: 1; 
+    padding: 1rem;
+  }
+
+.row {
+display: flex;
+}
+
+  
 
 .img-fluid {
-    width: 100%;
+    width: auto;
     height: 100%;
-    flex-shrink: 0;
     background: #198754;
-    
 }
 
 a {
