--- a/src/app/student-view/student-card/student-card.component.html
+++ b/src/app/student-view/student-card/student-card.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 overflow-hidden">
+<div class="card mb-3 overflow-hidden align-items-stretch">
   <div class="row g-0">
     <div class="col-md-4">
       <img [src]="'assets/'+ card.imageSrc" class="img-fluid rounded-start" alt="...">
