--- a/src/app/team-view/team-card/team-card.component.css
+++ b/src/app/team-view/team-card/team-card.component.css
@@ -1,19 +1,41 @@
+
 .card {
+    display: flex;
+    flex-direction: column;
+    height: 100%; 
+    background: #212529;
     flex-shrink: 0;
     border-radius: 5px;
     border: 3px solid #3A3F45;
-    background: #212529;
-    width: 100%;
-    height: 100%;
-}
 
+  }
+  
+  .card-body {
+    flex: 1; 
+    padding: 1rem;
+  }
+  
+  .row {
+    display: flex;
+  }
+  
+  @media (min-width: 768px) {
+    .row {
+      flex-wrap: wrap;
+    }
+  
+    .col-md-4 {
+      flex: 0 0 calc(33.333% - 1rem); 
+    }
+  }
+  
 p {
     color: #EAEDF2;
     font-family: Inter;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 45px; /* 187.5% */
+    line-height: 45px;
     display: inline;
 }
 
@@ -30,6 +52,7 @@ p {
     border: 3px solid #3A3F45;
     background: #198754;
 }
+
 
 a {
     width: 146px;
