finished edit-profile

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <!-- <app-profile></app-profile> -->
+  <app-account-info></app-account-info>
+  <div class="vertical"></div>
+  <app-profile></app-profile>
 </div>
