--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -1,14 +1,18 @@
 .container {
-  /* Temporarey: Delete After */
-
+  display: flex;
   border-radius: 40px;
   background: #9fa2a8;
 
   width: 78.125rem;
   height: 50rem;
   margin-top: 2rem;
-
+  margin-bottom: 2rem;
   flex-shrink: 0;
   border-radius: 2.5rem;
   background: #9fa2a8;
+}
+
+.vertical {
+  border-left: 3px solid #dde6ed;
+  height: 100%;
 }
