--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -8,14 +8,6 @@ h2 {
   line-height: normal;
 }
 
-h1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  color: #0f7553;
-  font-size: 128px;
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -30,9 +22,9 @@ h1 {
   justify-content: space-around;
 }
 
-input {
+/* input {
   width: 500px;
-}
+} */
 
 /* For buttons */
 #boxWrapper {
