merge: edit-profile + ahmed@homeview

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -14,7 +14,7 @@
         <label class="forgotPass">Forgot Passowrd?</label>
     </div>
     <div id="btnWrapper">
-        <button type="button" class="btn btn-success">Sign In</button>
+        <button type="button" class="btn btn-success" (click)="launchProfile('profile')">Sign In</button>
     </div>
 </div>
 <div class="imageRow">
