add: signup + signin via firebase + firebase config

--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <ul class="navMenu">
     <li>
       <a
-        routerLink="/home-view"
+        routerLink=""
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         >Home</a
