--- a/src/app/show-requests/request-card/request-card.component.css
+++ b/src/app/show-requests/request-card/request-card.component.css
@@ -7,6 +7,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    color: #9FA2A8;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 #buttons {
