--- a/src/app/show-requests/show-requests.component.css
+++ b/src/app/show-requests/show-requests.component.css
@@ -22,6 +22,11 @@ div a {
     cursor: pointer;
 }
 
+
+div a:hover {
+    color: #eaedf276;
+}
+
 .container {
     margin-bottom: 35px;
 }
@@ -44,4 +49,12 @@ div a {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    color: #EAEDF2;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
