--- a/src/app/view-my-team/view-my-team.component.css
+++ b/src/app/view-my-team/view-my-team.component.css
@@ -35,3 +35,51 @@
     line-height: normal;
 }
 
+#sidenav-1 a {
+    color: #9FA2A8;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration: none;
+}
+
+#sidenav-1 li {
+    border: 1px solid #3A3F45;
+}
+
+  
+  #sidenav-1 {
+    margin-top: 150px;
+    border: 1px solid #3A3F45;
+    position: fixed;
+    height: 100%;
+    top: 0;
+    width: 250px;
+    /* transform: translateX(-100%); */
+    transition:  0.3s ease;
+    z-index: 200;
+  }
+  
+  #sidenav-1.collapse {
+    transform: translateX(0);
+  }
+
+
+.overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0);
+    z-index: 150; /* Ensure the overlay is below the sidebar */
+}
+  
+  .overlay.active {
+    display: block;
+}
+
+
