--- a/src/app/student-view/student-card/student-card.component.html
+++ b/src/app/student-view/student-card/student-card.component.html
@@ -21,7 +21,7 @@
           <p class="tags">Concentration: </p>
           <p>{{ card.concentration }}</p>
         </div>
-        <a [href]="card.showMoreLink">Show more >></a>
+        <a [attr.href]="'#'+modalId" data-bs-toggle="modal">Show more >></a>
     </div>
   </div>
 </div>
