--- a/src/app/team-view/team-view.component.html
+++ b/src/app/team-view/team-view.component.html
@@ -1,8 +1,9 @@
 
  <div class="container">
   <div class="row mb-3">
-    <div *ngFor="let card of allCards.slice(0, visibleCardCount)" class="col-md-4" [@fadeInOut]>
-      <team-card [card]="card"></team-card>
+    <div *ngFor="let card of allCards.slice(0, visibleCardCount); let i=index" class="col-md-4" [@fadeInOut]>
+      <team-card [card]="card" [modalId]="'pop-up'+i"></team-card>
+      <pop-up [info]="card" [type]="'Team'" [modalId]="'pop-up'+i"></pop-up>
     </div>
   </div>
   <div class="text-center" *ngIf="showMore">
