--- a/src/app/show-requests/request-card/request-card.component.html
+++ b/src/app/show-requests/request-card/request-card.component.html
@@ -25,8 +25,8 @@
         </p>
     </div> 
     <div class="col-md-2 text-center" id="buttons">
-        <a href="">
+        <a [attr.href]="'#'+modalId" data-bs-toggle="modal">
             <img src="assets/Arrow.png" alt="">
         </a>
-    </div>        
+    </div>    
 </div>
