--- a/src/app/past-projects-view/past-project-card/past-project-card.component.html
+++ b/src/app/past-projects-view/past-project-card/past-project-card.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="width: 18rem;">
-    <img [src]="'assets/'+ info.imageSrc" class="card-img-top" alt="...">
+    <img [src]="'assets/'+ info.titlePicture" class="card-img-top" alt="...">
     <div class="card-body text-center">
-      <a [href]="info.link">{{info.name}}</a>
+      <a [href]="'projects/'+info.id">{{info.name}}</a>
     </div>
   </div>
