add: credentials and their functionality that update UI merged @ahmed/credentials + daniel@requests

--- a/src/app/header/searchbar/searchbar.component.html
+++ b/src/app/header/searchbar/searchbar.component.html
@@ -3,4 +3,7 @@
     <button class="btn btn-primary rounded-right">
         <i class="fa-solid fa-magnifying-glass"></i>
     </button>
+    <div style="padding-left: 10px;">
+        <img src="assets/tune.png" height="33px" width="33px">
+    </div>
 </div>
