--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -87,6 +87,6 @@ Ok, it is the bio here</textarea
 
   <div id="btnWrapper">
     <button type="button" class="btn btn-success">Show Requests</button>
-    <button type="button" class="btn btn-success">Change Password</button>
+    <button type="button" class="btn btn-success" (click)="signOut()">Change Password</button>
   </div>
 </div>
