--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div id="btnWrapper">
-        <button type="button" class="btn btn-success" (click)="nextForm('/signup-view/submit')">Next</button>
+        <button type="button" class="btn btn-success" (click)="nextForm('/signup/submit')">Next</button>
     </div>
 </div>
 
