--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -1,6 +1,15 @@
 <nav>
   <ul class="navMenu">
-    <li>
+    <li *ngFor='let item of navList'>
+      <a
+        routerLink={{item.path}}
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+      >
+      {{item.name}}
+      </a>
+    </li>
+    <!-- <li>
       <a
         routerLink=""
         routerLinkActive="active"
@@ -10,7 +19,7 @@
     </li>
     <li>
       <a
-        routerLink="/signin-view"
+        routerLink="/signin"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         >Sign In</a
@@ -18,13 +27,13 @@
     </li>
     <li>
       <a
-        routerLink="/signup-view"
+        routerLink="/signup"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         >Sign Up</a
       >
     </li>
-    <li>Contact Us</li>
-    <li>About Us</li>
+    <li>Past Projects</li>
+    <li>About Us</li> -->
   </ul>
 </nav>
