--- a/src/app/request-form/request-form.component.html
+++ b/src/app/request-form/request-form.component.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="form-group">
             <label for="textField"><p>Add Message:</p></label>
-            <input type="text" class="form-control align-top" id="textField" [(ngModel)]="textFieldValue" />
+            <textarea type="text" class="form-control align-top" id="textField" [(ngModel)]="textFieldValue"></textarea>
         </div>
     </div>
     <div class="row">
