--- a/src/app/signup-submit/signup-submit.component.css
+++ b/src/app/signup-submit/signup-submit.component.css
@@ -6,30 +6,14 @@ h1 {
     font-size: 128px;
 }
 
-#boxWrapper1 input {
-    width: 250px;
-}
-
-#boxWrapper2 input {
-    width: 500px;
-}
-
-#boxWrapper1 {
+#boxWrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
-#boxWrapper2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
-}
-
-.btn-success {
+#boxWrapper button {
     margin-top: 100px;
     border-radius: 50px;
     background-color: #198754;
