--- a/src/app/signup-submit/signup-submit.component.html
+++ b/src/app/signup-submit/signup-submit.component.html
@@ -13,6 +13,7 @@
         </div>
     </div>
     <div id="btnWrapper">
+        <button type="button" class="btn btn-info" (click)="goBack()">Back</button>
         <button type="button" class="btn btn-success" (click)="popup = true">Sign Up</button>
     </div>
 </div>
