Finished account info modificaiton V1

--- a/src/app/account-info/account-info.component.html
+++ b/src/app/account-info/account-info.component.html
@@ -3,9 +3,9 @@
 
   <label id="name">Hassan Alsayhah</label>
 
-  <label id="team">Team Name: Capstone Comrads</label>
+  <label id="team"><b>Team Name: </b><br />Capstone Comrads</label>
 
-  <label id="email">s201967890@kfupm.edu.sa</label>
+  <label id="email">s201967890&#64;kfupm.edu.sa</label>
 
   <label id="id">ID: 201967890</label>
 </div>
