--- a/src/app/account-info/account-info.component.css
+++ b/src/app/account-info/account-info.component.css
@@ -10,13 +10,17 @@
 
 label {
   width: 20rem;
-  color: #0f7553;
+  color: #212529;
   text-align: center;
   font-family: Inter;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+b {
+  font-weight: 700;
 }
 
 img {
